[package]
name = "time_game"
version = "0.1.0"
authors = ["Roger Curley <rocurley@gmail.com>"]

[dependencies]
tree = { path = "tree" }
types = { path = "types" }
game_state = { path = "game_state" }
render = { path = "render" }
portal_graph = { path = "portal_graph" }

ggez = { path = "../ggez"}

[workspace]
