[package]

name = "game_state"
version = "0.1.0"
authors = ["Roger Curley <rocurley@gmail.com>"]

[dependencies]
tree = { path = "../tree" }
types = { path = "../types" }
game_frame = { path = "../game_frame" }
render = { path = "../render" }
portal_graph = { path = "../portal_graph" }
rand = "0.4.1"
ggez = { path = "../../ggez" }
nalgebra = "0.13.1"
proptest = "0.4.0"
